--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 .application {
     background: black;
 
-    max-width: 680px;
+    max-width: 930px;
     height: 500px;
     margin: 50px auto;
     padding : 30px;
@@ -105,7 +105,7 @@ main { padding : 30px 0;
 .temperature {
     font-size: 50px ;
   position: relative;
-  left : 20px;
+  left : 5px;
   top : 1px;
     font-weight: bold;
 }
@@ -114,14 +114,14 @@ main { padding : 30px 0;
     position: relative;
     top : 5px;
     color: white;
-    right : 65px;
+    right : 175px;
     font-size: 25px;
 
 }
 .icon {
     display: flex;
     position: relative;
-    left : 100px;
+    left : 190px;
     bottom : 2px;
     color : white;
   width: 80px;
@@ -134,6 +134,7 @@ main { padding : 30px 0;
     display:flex;
    justify-content: center;
    margin-right: 70px;
+   gap: -5%;
    
    
 }
